libs/fitsio.h

    typedef __int64 LONGLONG;
    typedef unsigned __int64 ULONGLONG;
    typedef long long LONGLONG;
    typedef unsigned long long ULONGLONG;
    typedef __int64 LONGLONG;
    typedef unsigned __int64 ULONGLONG;
    typedef long long LONGLONG;
    typedef unsigned long long ULONGLONG;
typedef struct      
{
    int filehandle;   
    int driver;       
    int open_count;   
    char *filename;   
    int validcode;    
    int only_one;     
    int noextsyntax;  
    LONGLONG filesize; 
    LONGLONG logfilesize; 
    int lasthdu;      
    LONGLONG bytepos; 
    LONGLONG io_pos;  
    int curbuf;        
    int curhdu;       
    int hdutype;      
    int writemode;    
    int maxhdu;       
    int MAXHDU;       
    LONGLONG *headstart; 
    LONGLONG headend;   
    LONGLONG ENDpos;    
    LONGLONG nextkey;   
    LONGLONG datastart; 
    int imgdim;         
    LONGLONG imgnaxis[99]; 
    int tfield;          
    int startcol;        
    LONGLONG origrows;   
    LONGLONG numrows;    
    LONGLONG rowlength;  
    tcolumn *tableptr;   
    LONGLONG heapstart;  
    LONGLONG heapsize;   
    int request_compress_type;  
    long request_tilesize[MAX_COMPRESS_DIM]; 
    float request_quantize_level;  
    int request_quantize_method ;  
    int request_dither_seed;     
    int request_lossy_int_compress; 
    int request_huge_hdu;          
    float request_hcomp_scale;     
    int request_hcomp_smooth;      
    int compress_type;      
    long tilesize[MAX_COMPRESS_DIM]; 
    float quantize_level;   
    int quantize_method;   
    int dither_seed;      
    int compressimg; 
    char zcmptype[12];      
    int zbitpix;            
    int zndim;              
    long znaxis[MAX_COMPRESS_DIM];  
    long maxtilelen;        
    long maxelem;	    
    int cn_compressed;	    
    int cn_uncompressed;    
    int cn_gzip_data;       
    int cn_zscale;	    
    int cn_zzero;	    
    int cn_zblank;          
    double zscale;          
    double zzero;           
    double cn_bscale;       
    double cn_bzero;        
    double cn_actual_bzero; 
    int zblank;             
    int rice_blocksize;     
    int rice_bytepix;       
    float hcomp_scale;      
    int hcomp_smooth;       
    int  *tilerow;          
    long *tiledatasize;     
    int *tiletype;          
    void **tiledata;        
    void **tilenullarray;   
    int *tileanynull;       
    char *iobuffer;         
    long bufrecnum[NIOBUF]; 
    int dirty[NIOBUF];     
    int ageindex[NIOBUF];    
} FITSfile;
typedef struct         
{
    int HDUposition;  
    FITSfile *Fptr;   
}fitsfile;
int CFITS_API ffgkyj(fitsfile *fptr, const char *keyname, long *value, char *comm, int *status);
int CFITS_API ffgkyjj(fitsfile *fptr, const char *keyname, LONGLONG *value, char *comm, int *status);
int CFITS_API ffgkyujj(fitsfile *fptr, const char *keyname, ULONGLONG *value, char *comm, int *status);
int CFITS_API ffgkye(fitsfile *fptr, const char *keyname, float *value, char *comm,int *status);
int CFITS_API ffgkyd(fitsfile *fptr, const char *keyname, double *value,char *comm,int *status);
int CFITS_API ffgkyc(fitsfile *fptr, const char *keyname, float *value, char *comm,int *status);
int CFITS_API ffgkym(fitsfile *fptr, const char *keyname, double *value,char *comm,int *status);
int CFITS_API ffgkyt(fitsfile *fptr, const char *keyname, long *ivalue, double *dvalue,
           char *comm, int *status);
int CFITS_API ffgtdm(fitsfile *fptr, int colnum, int maxdim, int *naxis, long naxes[],
           int *status);
int CFITS_API ffgtdmll(fitsfile *fptr, int colnum, int maxdim, int *naxis, LONGLONG naxes[],
           int *status);
int CFITS_API ffdtdm(fitsfile *fptr, char *tdimstr, int colnum, int maxdim,
           int *naxis, long naxes[], int *status);
int CFITS_API ffdtdmll(fitsfile *fptr, char *tdimstr, int colnum, int maxdim,
           int *naxis, LONGLONG naxes[], int *status);
int CFITS_API ffgkns(fitsfile *fptr, const char *keyname, int nstart, int nmax, char *value[],
           int *nfound,  int *status);
int CFITS_API ffgknl(fitsfile *fptr, const char *keyname, int nstart, int nmax, int *value,
           int *nfound, int *status);
int CFITS_API ffgknj(fitsfile *fptr, const char *keyname, int nstart, int nmax, long *value,
           int *nfound, int *status);
int CFITS_API ffgknjj(fitsfile *fptr, const char *keyname, int nstart, int nmax, LONGLONG *value,
           int *nfound, int *status);
int CFITS_API ffgkne(fitsfile *fptr, const char *keyname, int nstart, int nmax, float *value,
           int *nfound, int *status);
int CFITS_API ffgknd(fitsfile *fptr, const char *keyname, int nstart, int nmax, double *value,
           int *nfound, int *status);
int CFITS_API ffh2st(fitsfile *fptr, char **header, int  *status);
int CFITS_API ffhdr2str( fitsfile *fptr,  int exclude_comm, char **exclist,
   int nexc, char **header, int *nkeys, int  *status);
int CFITS_API ffcnvthdr2str( fitsfile *fptr,  int exclude_comm, char **exclist,
   int nexc, char **header, int *nkeys, int  *status);
int CFITS_API ffghpr(fitsfile *fptr, int maxdim, int *simple, int *bitpix, int *naxis,
          long naxes[], long *pcount, long *gcount, int *extend, int *status);
int CFITS_API ffghprll(fitsfile *fptr, int maxdim, int *simple, int *bitpix, int *naxis,
          LONGLONG naxes[], long *pcount, long *gcount, int *extend, int *status);
int CFITS_API ffghtb(fitsfile *fptr,int maxfield, long *naxis1, long *naxis2,
           int *tfields, char **ttype, long *tbcol, char **tform, char **tunit,
           char *extname,  int *status);
int CFITS_API ffghtbll(fitsfile *fptr,int maxfield, LONGLONG *naxis1, LONGLONG *naxis2,
           int *tfields, char **ttype, LONGLONG *tbcol, char **tform, char **tunit,
           char *extname,  int *status);
int CFITS_API ffghbn(fitsfile *fptr, int maxfield, long *naxis2, int *tfields,
           char **ttype, char **tform, char **tunit, char *extname,
           long *pcount, int *status);
int CFITS_API ffghbnll(fitsfile *fptr, int maxfield, LONGLONG *naxis2, int *tfields,
           char **ttype, char **tform, char **tunit, char *extname,
           LONGLONG *pcount, int *status);
int CFITS_API ffuky(fitsfile *fptr, int datatype, const char *keyname, void *value,
          const char *comm, int *status);
int CFITS_API ffucrd(fitsfile *fptr, const char *keyname, const char *card, int *status);
int CFITS_API ffukyu(fitsfile *fptr, const char *keyname, const char *comm, int *status);
int CFITS_API ffukys(fitsfile *fptr, const char *keyname, const char *value, const char *comm, int *status);
int CFITS_API ffukls(fitsfile *fptr, const char *keyname, const char *value, const char *comm, int *status);
int CFITS_API ffukyl(fitsfile *fptr, const char *keyname, int value, const char *comm, int *status);
int CFITS_API ffukyj(fitsfile *fptr, const char *keyname, LONGLONG value, const char *comm, int *status);
int CFITS_API ffukyuj(fitsfile *fptr, const char *keyname, ULONGLONG value, const char *comm, int *status);
int CFITS_API ffukyf(fitsfile *fptr, const char *keyname, float value, int decim, const char *comm,
          int *status);
int CFITS_API ffukye(fitsfile *fptr, const char *keyname, float value, int decim, const char *comm,
          int *status);
int CFITS_API ffukyg(fitsfile *fptr, const char *keyname, double value, int decim, const char *comm,
          int *status);
int CFITS_API ffukyd(fitsfile *fptr, const char *keyname, double value, int decim, const char *comm,
          int *status);
int CFITS_API ffukyc(fitsfile *fptr, const char *keyname, float *value, int decim, const char *comm,
          int *status);
int CFITS_API ffukym(fitsfile *fptr, const char *keyname, double *value, int decim, const char *comm,
          int *status);
int CFITS_API ffukfc(fitsfile *fptr, const char *keyname, float *value, int decim, const char *comm,
          int *status);
int CFITS_API ffukfm(fitsfile *fptr, const char *keyname, double *value, int decim, const char *comm,
          int *status);
int CFITS_API ffmrec(fitsfile *fptr, int nkey, const char *card, int *status);
int CFITS_API ffmcrd(fitsfile *fptr, const char *keyname, const char *card, int *status);
int CFITS_API ffmnam(fitsfile *fptr, const char *oldname, const char *newname, int *status);
int CFITS_API ffmcom(fitsfile *fptr, const char *keyname, const char *comm, int *status);
int CFITS_API ffmkyu(fitsfile *fptr, const char *keyname, const char *comm, int *status);
int CFITS_API ffmkys(fitsfile *fptr, const char *keyname, const char *value, const char *comm,int *status);
int CFITS_API ffmkls(fitsfile *fptr, const char *keyname, const char *value, const char *comm,int *status);
int CFITS_API ffmkyl(fitsfile *fptr, const char *keyname, int value, const char *comm, int *status);
int CFITS_API ffmkyj(fitsfile *fptr, const char *keyname, LONGLONG value, const char *comm, int *status);
int CFITS_API ffmkyuj(fitsfile *fptr, const char *keyname, ULONGLONG value, const char *comm, int *status);
int CFITS_API ffmkyf(fitsfile *fptr, const char *keyname, float value, int decim, const char *comm,
          int *status);
int CFITS_API ffmkye(fitsfile *fptr, const char *keyname, float value, int decim, const char *comm,
          int *status);
int CFITS_API ffmkyg(fitsfile *fptr, const char *keyname, double value, int decim, const char *comm,
          int *status);
int CFITS_API ffmkyd(fitsfile *fptr, const char *keyname, double value, int decim, const char *comm,
          int *status);
int CFITS_API ffmkyc(fitsfile *fptr, const char *keyname, float *value, int decim, const char *comm,
          int *status);
int CFITS_API ffmkym(fitsfile *fptr, const char *keyname, double *value, int decim, const char *comm,
          int *status);
int CFITS_API ffmkfc(fitsfile *fptr, const char *keyname, float *value, int decim, const char *comm,
          int *status);
int CFITS_API ffmkfm(fitsfile *fptr, const char *keyname, double *value, int decim, const char *comm,
          int *status);
int CFITS_API ffirec(fitsfile *fptr, int nkey, const char *card, int *status);
int CFITS_API ffikey(fitsfile *fptr, const char *card, int *status);
int CFITS_API ffikyu(fitsfile *fptr, const char *keyname, const char *comm, int *status);
int CFITS_API ffikys(fitsfile *fptr, const char *keyname, const char *value, const char *comm,int *status);
int CFITS_API ffikls(fitsfile *fptr, const char *keyname, const char *value, const char *comm,int *status);
int CFITS_API ffikyl(fitsfile *fptr, const char *keyname, int value, const char *comm, int *status);
int CFITS_API ffikyj(fitsfile *fptr, const char *keyname, LONGLONG value, const char *comm, int *status);
int CFITS_API ffikyf(fitsfile *fptr, const char *keyname, float value, int decim, const char *comm,
          int *status);
int CFITS_API ffikye(fitsfile *fptr, const char *keyname, float value, int decim, const char *comm,
          int *status);
int CFITS_API ffikyg(fitsfile *fptr, const char *keyname, double value, int decim, const char *comm,
          int *status);
int CFITS_API ffikyd(fitsfile *fptr, const char *keyname, double value, int decim, const char *comm,
          int *status);
int CFITS_API ffikyc(fitsfile *fptr, const char *keyname, float *value, int decim, const char *comm,
          int *status);
int CFITS_API ffikym(fitsfile *fptr, const char *keyname, double *value, int decim, const char *comm,
          int *status);
int CFITS_API ffikfc(fitsfile *fptr, const char *keyname, float *value, int decim, const char *comm,
          int *status);
int CFITS_API ffikfm(fitsfile *fptr, const char *keyname, double *value, int decim, const char *comm,
          int *status);
int CFITS_API ffdkey(fitsfile *fptr, const char *keyname, int *status);
int CFITS_API ffdstr(fitsfile *fptr, const char *string, int *status);
int CFITS_API ffdrec(fitsfile *fptr, int keypos, int *status);
int CFITS_API ffghdn(fitsfile *fptr, int *chdunum);
int CFITS_API ffghdt(fitsfile *fptr, int *exttype, int *status);
int CFITS_API ffghad(fitsfile *fptr, long *headstart, long *datastart, long *dataend,
           int *status);
int CFITS_API ffghadll(fitsfile *fptr, LONGLONG *headstart, LONGLONG *datastart,
           LONGLONG *dataend, int *status);
int CFITS_API ffghof(fitsfile *fptr, OFF_T *headstart, OFF_T *datastart, OFF_T *dataend,
           int *status);
int CFITS_API ffgipr(fitsfile *fptr, int maxaxis, int *imgtype, int *naxis,
           long *naxes, int *status);
int CFITS_API ffgiprll(fitsfile *fptr, int maxaxis, int *imgtype, int *naxis,
           LONGLONG *naxes, int *status);
int CFITS_API ffgidt(fitsfile *fptr, int *imgtype, int *status);
int CFITS_API ffgiet(fitsfile *fptr, int *imgtype, int *status);
int CFITS_API ffgidm(fitsfile *fptr, int *naxis,  int *status);