src/wrapper.zig

pub extern fn ffgkyj(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]c_long, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkyjj(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]LONGLONG, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkyujj(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]ULONGLONG, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkye(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f32, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkyd(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f64, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkyc(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f32, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkym(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f64, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgkyt(fptr: [*c]fitsfile, keyname: [*c]const u8, ivalue: [*c]c_long, dvalue: [*c]f64, comm: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgtdm(fptr: [*c]fitsfile, colnum: c_int, maxdim: c_int, naxis: [*c]c_int, naxes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgtdmll(fptr: [*c]fitsfile, colnum: c_int, maxdim: c_int, naxis: [*c]c_int, naxes: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffdtdm(fptr: [*c]fitsfile, tdimstr: [*c]u8, colnum: c_int, maxdim: c_int, naxis: [*c]c_int, naxes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffdtdmll(fptr: [*c]fitsfile, tdimstr: [*c]u8, colnum: c_int, maxdim: c_int, naxis: [*c]c_int, naxes: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffgkns(fptr: [*c]fitsfile, keyname: [*c]const u8, nstart: c_int, nmax: c_int, value: [*c][*c]u8, nfound: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgknl(fptr: [*c]fitsfile, keyname: [*c]const u8, nstart: c_int, nmax: c_int, value: [*c]c_int, nfound: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgknj(fptr: [*c]fitsfile, keyname: [*c]const u8, nstart: c_int, nmax: c_int, value: [*c]c_long, nfound: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgknjj(fptr: [*c]fitsfile, keyname: [*c]const u8, nstart: c_int, nmax: c_int, value: [*c]LONGLONG, nfound: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgkne(fptr: [*c]fitsfile, keyname: [*c]const u8, nstart: c_int, nmax: c_int, value: [*c]f32, nfound: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgknd(fptr: [*c]fitsfile, keyname: [*c]const u8, nstart: c_int, nmax: c_int, value: [*c]f64, nfound: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffh2st(fptr: [*c]fitsfile, header: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffhdr2str(fptr: [*c]fitsfile, exclude_comm: c_int, exclist: [*c][*c]u8, nexc: c_int, header: [*c][*c]u8, nkeys: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffcnvthdr2str(fptr: [*c]fitsfile, exclude_comm: c_int, exclist: [*c][*c]u8, nexc: c_int, header: [*c][*c]u8, nkeys: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffghpr(fptr: [*c]fitsfile, maxdim: c_int, simple: [*c]c_int, bitpix: [*c]c_int, naxis: [*c]c_int, naxes: [*c]c_long, pcount: [*c]c_long, gcount: [*c]c_long, extend: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffghprll(fptr: [*c]fitsfile, maxdim: c_int, simple: [*c]c_int, bitpix: [*c]c_int, naxis: [*c]c_int, naxes: [*c]LONGLONG, pcount: [*c]c_long, gcount: [*c]c_long, extend: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffghtb(fptr: [*c]fitsfile, maxfield: c_int, naxis1: [*c]c_long, naxis2: [*c]c_long, tfields: [*c]c_int, ttype: [*c][*c]u8, tbcol: [*c]c_long, tform: [*c][*c]u8, tunit: [*c][*c]u8, extname: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffghtbll(fptr: [*c]fitsfile, maxfield: c_int, naxis1: [*c]LONGLONG, naxis2: [*c]LONGLONG, tfields: [*c]c_int, ttype: [*c][*c]u8, tbcol: [*c]LONGLONG, tform: [*c][*c]u8, tunit: [*c][*c]u8, extname: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffghbn(fptr: [*c]fitsfile, maxfield: c_int, naxis2: [*c]c_long, tfields: [*c]c_int, ttype: [*c][*c]u8, tform: [*c][*c]u8, tunit: [*c][*c]u8, extname: [*c]u8, pcount: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffghbnll(fptr: [*c]fitsfile, maxfield: c_int, naxis2: [*c]LONGLONG, tfields: [*c]c_int, ttype: [*c][*c]u8, tform: [*c][*c]u8, tunit: [*c][*c]u8, extname: [*c]u8, pcount: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffuky(fptr: [*c]fitsfile, datatype: c_int, keyname: [*c]const u8, value: ?*anyopaque, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffucrd(fptr: [*c]fitsfile, keyname: [*c]const u8, card: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukyu(fptr: [*c]fitsfile, keyname: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukys(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukls(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukyl(fptr: [*c]fitsfile, keyname: [*c]const u8, value: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukyj(fptr: [*c]fitsfile, keyname: [*c]const u8, value: LONGLONG, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukyuj(fptr: [*c]fitsfile, keyname: [*c]const u8, value: ULONGLONG, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukyf(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukye(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukyg(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukyd(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukyc(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukym(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukfc(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffukfm(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmrec(fptr: [*c]fitsfile, nkey: c_int, card: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmcrd(fptr: [*c]fitsfile, keyname: [*c]const u8, card: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmnam(fptr: [*c]fitsfile, oldname: [*c]const u8, newname: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmcom(fptr: [*c]fitsfile, keyname: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkyu(fptr: [*c]fitsfile, keyname: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkys(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkls(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkyl(fptr: [*c]fitsfile, keyname: [*c]const u8, value: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkyj(fptr: [*c]fitsfile, keyname: [*c]const u8, value: LONGLONG, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkyuj(fptr: [*c]fitsfile, keyname: [*c]const u8, value: ULONGLONG, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkyf(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkye(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkyg(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkyd(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkyc(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkym(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkfc(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffmkfm(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffirec(fptr: [*c]fitsfile, nkey: c_int, card: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikey(fptr: [*c]fitsfile, card: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikyu(fptr: [*c]fitsfile, keyname: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikys(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikls(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]const u8, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikyl(fptr: [*c]fitsfile, keyname: [*c]const u8, value: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikyj(fptr: [*c]fitsfile, keyname: [*c]const u8, value: LONGLONG, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikyf(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikye(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikyg(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikyd(fptr: [*c]fitsfile, keyname: [*c]const u8, value: f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikyc(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikym(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikfc(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f32, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffikfm(fptr: [*c]fitsfile, keyname: [*c]const u8, value: [*c]f64, decim: c_int, comm: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffdkey(fptr: [*c]fitsfile, keyname: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffdstr(fptr: [*c]fitsfile, string: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffdrec(fptr: [*c]fitsfile, keypos: c_int, status: [*c]c_int) c_int;
pub extern fn ffghdn(fptr: [*c]fitsfile, chdunum: [*c]c_int) c_int;
pub extern fn ffghdt(fptr: [*c]fitsfile, exttype: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffghad(fptr: [*c]fitsfile, headstart: [*c]c_long, datastart: [*c]c_long, dataend: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffghadll(fptr: [*c]fitsfile, headstart: [*c]LONGLONG, datastart: [*c]LONGLONG, dataend: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffghof(fptr: [*c]fitsfile, headstart: [*c]off_t, datastart: [*c]off_t, dataend: [*c]off_t, status: [*c]c_int) c_int;
pub extern fn ffgipr(fptr: [*c]fitsfile, maxaxis: c_int, imgtype: [*c]c_int, naxis: [*c]c_int, naxes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgiprll(fptr: [*c]fitsfile, maxaxis: c_int, imgtype: [*c]c_int, naxis: [*c]c_int, naxes: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffgidt(fptr: [*c]fitsfile, imgtype: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgiet(fptr: [*c]fitsfile, imgtype: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgidm(fptr: [*c]fitsfile, naxis: [*c]c_int, status: [*c]c_int) c_int;
